KAFKA-963 hdfs sink connector failed to create table in hive (java17)